snapsync dirty draft