@@ -12,7 +12,9 @@
  *
  * SPDX-License-Identifier: Apache-2.0
  */
-package org.hyperledger.besu.ethereum.eth;
+package org.hyperledger.besu.ethereum.eth.transactions;
+
+import static java.util.stream.Collectors.toUnmodifiableList;
 
 import org.hyperledger.besu.ethereum.eth.messages.EthPV62;
 import org.hyperledger.besu.ethereum.eth.messages.EthPV63;
@@ -20,26 +22,22 @@ import org.hyperledger.besu.ethereum.eth.messages.EthPV65;
 import org.hyperledger.besu.ethereum.p2p.rlpx.wire.Capability;
 import org.hyperledger.besu.ethereum.p2p.rlpx.wire.SubProtocol;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Stream;
 
 /**
  * Eth protocol messages as defined in
  * https://github.com/ethereum/wiki/wiki/Ethereum-Wire-Protocol#new-model-syncing-pv62}
  */
-public class EthProtocol implements SubProtocol {
-  public static final String NAME = "eth";
-  public static final Capability ETH62 = Capability.create(NAME, EthVersion.V62);
-  public static final Capability ETH63 = Capability.create(NAME, EthVersion.V63);
-  public static final Capability ETH64 = Capability.create(NAME, EthVersion.V64);
-  public static final Capability ETH65 = Capability.create("snap", EthVersion.V65);
-  public static final Capability ETH66 = Capability.create(NAME, EthVersion.V66);
+public class SnapProtocol implements SubProtocol {
+  public static final String NAME = "snap";
+  public static final Capability SNAP1 = Capability.create("snap", SnapVersion.V1);
 
-  private static final EthProtocol INSTANCE = new EthProtocol();
+  private static final SnapProtocol INSTANCE = new SnapProtocol();
 
   private static final List<Integer> eth62Messages =
-      Arrays.asList(
+      List.of(
           EthPV62.STATUS,
           EthPV62.NEW_BLOCK_HASHES,
           EthPV62.TRANSACTIONS,
@@ -49,22 +47,35 @@ public class EthProtocol implements SubProtocol {
           EthPV62.BLOCK_BODIES,
           EthPV62.NEW_BLOCK);
 
-  private static final List<Integer> eth63Messages = new ArrayList<>(eth62Messages);
+  private static final List<Integer> eth63Messages =
+      Stream.concat(
+              eth62Messages.stream(),
+              Stream.of(
+                  EthPV63.GET_NODE_DATA, EthPV63.NODE_DATA, EthPV63.GET_RECEIPTS, EthPV63.RECEIPTS))
+          .collect(toUnmodifiableList());
 
-  static {
-    eth63Messages.addAll(
-        Arrays.asList(
-            EthPV63.GET_NODE_DATA, EthPV63.NODE_DATA, EthPV63.GET_RECEIPTS, EthPV63.RECEIPTS));
-  }
+  private static final List<Integer> eth65Messages =
+      Stream.concat(
+              eth63Messages.stream(),
+              Stream.of(
+                  EthPV65.NEW_POOLED_TRANSACTION_HASHES,
+                  EthPV65.GET_POOLED_TRANSACTIONS,
+                  EthPV65.POOLED_TRANSACTIONS))
+          .collect(toUnmodifiableList());
 
-  private static final List<Integer> eth65Messages = new ArrayList<>(eth63Messages);
-
-  static {
-    eth65Messages.addAll(
-        Arrays.asList(
-            EthPV65.NEW_POOLED_TRANSACTION_HASHES,
+  public static boolean requestIdCompatible(final int code) {
+    return Set.of(
+            EthPV62.GET_BLOCK_HEADERS,
+            EthPV62.BLOCK_HEADERS,
+            EthPV62.GET_BLOCK_BODIES,
+            EthPV62.BLOCK_BODIES,
             EthPV65.GET_POOLED_TRANSACTIONS,
-            EthPV65.POOLED_TRANSACTIONS));
+            EthPV65.POOLED_TRANSACTIONS,
+            EthPV63.GET_NODE_DATA,
+            EthPV63.NODE_DATA,
+            EthPV63.GET_RECEIPTS,
+            EthPV63.RECEIPTS)
+        .contains(code);
   }
 
   @Override
@@ -75,18 +86,10 @@ public class EthProtocol implements SubProtocol {
   @Override
   public int messageSpace(final int protocolVersion) {
     switch (protocolVersion) {
-      case EthVersion.V62:
-        return 8;
-      case EthVersion.V63:
-      case EthVersion.V64:
-      case EthVersion.V66:
+      case SnapVersion.V1:
         // same number of messages in each range, eth65 defines messages in the middle of the
         // range defined by eth63 and eth64 defines no new ranges.
         return 17;
-      case EthVersion.V65:
-        // same number of messages in each range, eth65 defines messages in the middle of the
-        // range defined by eth63 and eth64 defines no new ranges.
-        return 33;
       default:
         return 0;
     }
@@ -94,14 +97,8 @@ public class EthProtocol implements SubProtocol {
 
   @Override
   public boolean isValidMessageCode(final int protocolVersion, final int code) {
-    System.out.println("allo code ?"+code);
     switch (protocolVersion) {
-      case EthVersion.V62:
-        return eth62Messages.contains(code);
-      case EthVersion.V63:
-      case EthVersion.V64:
-        return eth63Messages.contains(code);
-      case EthVersion.V65:
+      case SnapVersion.V1:
         return eth65Messages.contains(code);
       default:
         return false;
@@ -146,19 +143,11 @@ public class EthProtocol implements SubProtocol {
     }
   }
 
-  public static EthProtocol get() {
+  public static SnapProtocol get() {
     return INSTANCE;
   }
 
-  public static class EthVersion {
-    public static final int V62 = 62;
-    public static final int V63 = 63;
-    public static final int V64 = 64;
-    public static final int V65 = 1;
-    public static final int V66 = 66;
-  }
-
-  public static boolean isEth66Compatible(final Capability capability) {
-    return NAME.equals(capability.getName()) && capability.getVersion() >= ETH66.getVersion();
+  public static class SnapVersion {
+    public static final int V1 = 1;
   }
 }
